--- a/GUI/Properties/Resources.resx
+++ b/GUI/Properties/Resources.resx
@@ -529,4 +529,7 @@
   <data name="no_image_512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\no_image_512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gridview_no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gridview_no_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
