--- a/GUI/Properties/Resources.resx
+++ b/GUI/Properties/Resources.resx
@@ -532,4 +532,7 @@
   <data name="gridview_no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gridview_no_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="picture_box_no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\picture_box_no_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
