--- a/GUI/Properties/Resources.resx
+++ b/GUI/Properties/Resources.resx
@@ -538,4 +538,13 @@
   <data name="tickets" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tickets.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AvailableSeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AvailableSeat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BookedSeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BookedSeat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SelectedSeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SelectedSeat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
